GPII-153, GPII-187: Updated code to use the current infusion lib. No javascript error at this point.

--- a/demos/speakTextAdjusterGroup/index.html
+++ b/demos/speakTextAdjusterGroup/index.html
@@ -5,8 +5,8 @@
 
         <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/fss/css/fss-layout.css" />
         <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/fss/css/fss-text.css" />
-        <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/components/uiOptions/css/fss/fss-text-uio.css" />
-        <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/components/uiOptions/css/UIOptions.css" />
+        <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/preferences/css/fss/fss-text-prefsEditor.css" />
+        <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/preferences/css/PrefsEditor.css" />
 
         <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,700' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
@@ -32,13 +32,13 @@
 
         <script type="text/javascript">
             $(document).ready(function () {
-                demo.initGPII(".flc-uiOptions");
+                demo.initGPII(".flc-prefsEditor");
             });
         </script>
     </head>
     <body>
         <h1>Demo of the Speak Text adjuster group</h1>
 
-        <div class="flc-uiOptions"></div>
+        <div class="flc-prefsEditor"></div>
     </body>
 </html>
