--- a/src/shared/adjusters/html/UIOptionsTemplate-increaseSize.html
+++ b/src/shared/adjusters/html/UIOptionsTemplate-increaseSize.html
@@ -12,14 +12,14 @@
 
 <div class="gpii-increaseSizePreferenceGroup">
 
-	<div class="flc-uiOptions-text-size gpii-prefsEditor-category gpiic-category fl-uiOptions-text">
-		<div class="flc-uiOptions-plus-minus-numerical">
+	<div class="flc-prefsEditor-text-size gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
+		<div class="flc-prefsEditor-plus-minus-numerical">
 		    <h2><label class="gpiic-increaseSize-plusMinusNumericalLabelTextSize"></label></h2>
 		    
 		    <div class="gpii-prefsEditor-previewPerSettingContainer">
 		        <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingEye"></div>
 		        <div class="gpii-prefsEditor-previewPerSettingEyeBackground"></div>
-		        <iframe class="gpii-prefsEditor-previewPerSettingFrame flc-uiOptions-preview-per-setting-frame" src="" frameborder="0"></iframe>
+		        <iframe class="gpii-prefsEditor-previewPerSettingFrame flc-prefsEditor-preview-per-setting-frame" src="" frameborder="0"></iframe>
 		    </div>
 		
 		    <div class="gpii-increaseSize-plusMinusNumericalWidget">
@@ -30,14 +30,14 @@
 		</div>
 	</div>
 
-	<div class="gpii-prefsEditor-category gpiic-category fl-uiOptions-text">
+	<div class="gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
 		<div class="gpiic-increaseSize-cursor-size">
 		    <h2><!-- <span class="fl-icon-size"></span> --><label class="gpiic-increaseSize-cursor-size-label" for="cursor-size"></label></h2>
 		
 		    <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingContainer">
 		        <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingEye"></div>
 		        <div class="gpii-prefsEditor-previewPerSettingEyeBackground"></div>
-		        <iframe class="gpii-prefsEditor-previewPerSettingFrame flc-uiOptions-preview-per-setting-frame" src="" frameborder="0"></iframe>
+		        <iframe class="gpii-prefsEditor-previewPerSettingFrame flc-prefsEditor-preview-per-setting-frame" src="" frameborder="0"></iframe>
 		    </div>
 		
 		    <div>
@@ -51,14 +51,14 @@
 		</div>
 	</div>
 	
-	<div class="flc-uiOptions-magnifier gpii-prefsEditor-category gpiic-category fl-uiOptions-text">
-		<div class="flc-uiOptions-plus-minus-numerical">
+	<div class="flc-prefsEditor-magnifier gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
+		<div class="flc-prefsEditor-plus-minus-numerical">
 		    <h2><label class="gpiic-increaseSize-plusMinusNumericalLabelMagnifier"></label></h2>
 		    
 		    <div class="gpii-prefsEditor-previewPerSettingContainer">
 		        <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingEye"></div>
 		        <div class="gpii-prefsEditor-previewPerSettingEyeBackground"></div>
-		        <iframe class="gpii-prefsEditor-previewPerSettingFrame flc-uiOptions-preview-per-setting-frame" src="" frameborder="0"></iframe>
+		        <iframe class="gpii-prefsEditor-previewPerSettingFrame flc-prefsEditor-preview-per-setting-frame" src="" frameborder="0"></iframe>
 		    </div>
 		
 		    <div class="gpii-increaseSize-plusMinusNumericalWidget">
@@ -70,8 +70,8 @@
 	</div>
 
 	<input type="checkbox" id="preferenceSwitchIncreaseSizeExtra" class="gpiic-increaseSize-preferenceSwitchExtra"/>
-    <div class="gpii-prefsEditor-category-hidden gpiic-category-hidden fl-uiOptions-text">
-		<div class="gpii-prefsEditor-category gpiic-category fl-uiOptions-text">
+    <div class="gpii-prefsEditor-category-hidden gpiic-category-hidden fl-prefsEditor-text">
+		<div class="gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
 			<h2>
 			    <label class="gpiic-increaseSize-magnifierPositionHeading"></label>
 			</h2>
@@ -85,7 +85,7 @@
 			    </label>
 			</div>
 		</div>
-		<div class="gpii-prefsEditor-category gpiic-category fl-uiOptions-text">
+		<div class="gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
 			<h2>
 			    <label class="gpiic-increaseSize-magnifierFollowsHeading"></label>
 			</h2>
