--- a/src/shared/adjusters/html/newestSpeakText.html
+++ b/src/shared/adjusters/html/newestSpeakText.html
@@ -1,13 +1,13 @@
-<form id="options" action="" class="fl-uiOptions fl-uiOptions-fullNoPreview fl-col-fixed-72em fl-focus">
-    <div class="flc-uiOptions-controls">
-        <div class="fl-uiOptions-category">
+<form id="options" action="" class="fl-prefsEditor fl-prefsEditor-fullNoPreview fl-col-fixed-72em fl-focus">
+    <div class="flc-prefsEditor-controls">
+        <div class="fl-prefsEditor-category">
             <div class="speakText-collectiveContainer"></div>
         </div>
     </div>
 </form>
 
-<div class="fl-text-align-center fl-uiOptions-buttons">
-    <input class="flc-uiOptions-save fl-uiOptions-save" type="button" />
-    <input class="flc-uiOptions-reset" type="button" />
-    <input class="flc-uiOptions-cancel fl-uiOptions-cancel" type="button" />
+<div class="fl-text-align-center fl-prefsEditor-buttons">
+    <input class="flc-prefsEditor-save fl-prefsEditor-save" type="button" />
+    <input class="flc-prefsEditor-reset" type="button" />
+    <input class="flc-prefsEditor-cancel fl-prefsEditor-cancel" type="button" />
 </div>
