--- a/src/pmt/html/PMTUIOptions.html
+++ b/src/pmt/html/PMTUIOptions.html
@@ -1,5 +1,5 @@
-<form id="options" action="" class="fl-uiOptions gpii-prefsEditor fl-focus">
-    <div class="fl-container-flex60 fl-force-left gpii-prefsEditor-preferenceGroup flc-uiOptions-contrastPanel">
+<form id="options" action="" class="fl-prefsEditor gpii-prefsEditor fl-focus">
+    <div class="fl-container-flex60 fl-force-left gpii-prefsEditor-preferenceGroup flc-prefsEditor-contrastPanel">
 
         <div class="contrastPreferenceGroup">
             <div class="gpii-prefsEditor-contrast"></div>
@@ -14,10 +14,10 @@
     </div>
 
     <div class="fl-container-flex35 fl-force-right">
-        <div class="fl-uiOptions-buttons">
-            <input class="flc-uiOptions-save fl-uiOptions-save" type="button" value="" />
-            <input class="flc-uiOptions-reset" type="button" value="" />
-            <input class="flc-uiOptions-cancel fl-uiOptions-cancel" type="button" value="" />
+        <div class="fl-prefsEditor-buttons">
+            <input class="flc-prefsEditor-save fl-prefsEditor-save" type="button" value="" />
+            <input class="flc-prefsEditor-reset" type="button" value="" />
+            <input class="flc-prefsEditor-cancel fl-prefsEditor-cancel" type="button" value="" />
         </div>
     </div>
 </form>
