--- a/src/shared/adjusters/html/UIOptionsTemplate-contrastNew.html
+++ b/src/shared/adjusters/html/UIOptionsTemplate-contrastNew.html
@@ -10,12 +10,12 @@
 </div>
 <label class="gpii-prefsEditor-addToMyPreferencesLabel gpiic-addToMyPreferencesLabel" for="addToMyPreferencesContrast" tooltip-checked="" tooltip-unchecked="" title=""></label>
 <br/>
-<div class="gpii-prefsEditor-category gpiic-category fl-uiOptions-text">
+<div class="gpii-prefsEditor-category gpiic-category fl-prefsEditor-text">
     <h2><label class="gpiic-contrast-contrastLabel"></label></h2>
 
     <div class="gpii-prefsEditor-previewPerSettingContainer">
         <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingEye"></div>
         <div class="gpii-prefsEditor-previewPerSettingEyeBackground"></div>
-        <iframe class="gpii-prefsEditor-previewPerSettingFrame flc-uiOptions-preview-per-setting-frame" src="" frameborder="0"></iframe>
+        <iframe class="gpii-prefsEditor-previewPerSettingFrame flc-prefsEditor-preview-per-setting-frame" src="" frameborder="0"></iframe>
     </div>
 </div>
