--- a/src/shared/adjusters/html/UIOptionsTemplate-magnifier.html
+++ b/src/shared/adjusters/html/UIOptionsTemplate-magnifier.html
@@ -1,5 +1,5 @@
-<div class="flc-uiOptions-magnifier">
-    <h2><!-- <span class="fl-icon-size"></span> --><label class="flc-uiOptions-magnifier-label" for="magnifier"></label></h2>
+<div class="flc-prefsEditor-magnifier">
+    <h2><!-- <span class="fl-icon-size"></span> --><label class="flc-prefsEditor-magnifier-label" for="magnifier"></label></h2>
     <div class="fl-inputs">
         <div class="fl-force-left">
             <div class="flc-textfieldSlider-slider fl-force-left fl-slider gpii-slider gpii-slider-horz"> </div>
