--- a/src/shared/adjusters/html/speakTextCollectiveTemplate.html
+++ b/src/shared/adjusters/html/speakTextCollectiveTemplate.html
@@ -11,11 +11,11 @@
 <div class="preference">
     <div class="fully-expanded speakText-screenReaderTTSEnabled-element">
         <h3><label for="screenReaderTTSEnabled" class="gpii-screenReaderTTSEnabled-label switch"></label></h3>
-        <div id="screen-reader-onoff" class="fl-uiOptions-onoff">
+        <div id="screen-reader-onoff" class="fl-prefsEditor-onoff">
             <input type="checkbox" id="screenReaderTTSEnabled" class="gpii-screenReaderTTSEnabled"/>
             <label for="screenReaderTTSEnabled">
-                <span class="fl-uiOptions-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF" tabindex="0">
-                    <span class="fl-uiOptions-switch-inner"></span>
+                <span class="fl-prefsEditor-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF" tabindex="0">
+                    <span class="fl-prefsEditor-switch-inner"></span>
                 </span>
             </label>
         </div><br><br><br>
@@ -71,11 +71,11 @@
 
         <div class="speakText-screenReaderBrailleOutput-element">
             <h3><label for="braille" class="gpii-screenReaderBrailleOutput-label switch"></label></h3>
-            <div id="braille-onoff" class="fl-uiOptions-onoff">
+            <div id="braille-onoff" class="fl-prefsEditor-onoff">
                 <input type="checkbox" id="braille" class="gpii-screenReaderBrailleOutput" />
                 <label for="braille">
-                    <span class="fl-uiOptions-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF">
-                        <span class="fl-uiOptions-switch-inner"></span>
+                    <span class="fl-prefsEditor-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF">
+                        <span class="fl-prefsEditor-switch-inner"></span>
                     </span>
                 </label>
             </div><br><br>
