Implemented the contrastTheme adjuster by overriding the contrast adjuster and restricting control values.

--- a/demos/adjustersPilots2/index.html
+++ b/demos/adjustersPilots2/index.html
@@ -35,6 +35,7 @@
     <script type="text/javascript" src="../../src/shared/adjusters/js/FollowingElementAdjuster.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/MagnifierFollowsFollowingElementAdjuster.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/ScreenReaderFollowsFollowingElementAdjuster.js"></script>
+    <script type="text/javascript" src="../../src/shared/adjusters/js/ContrastThemeAdjuster.js"></script>
 
     <!-- The JS files of the enactors of my custom adjusters -->
     <!-- <script type="text/javascript" src="../../src/shared/enactors/js/ContrastEnactor.js"></script> -->
