--- a/src/shared/adjusters/html/adjustersPilots2.html
+++ b/src/shared/adjusters/html/adjustersPilots2.html
@@ -4,6 +4,7 @@
 		<div class="gpiic-increaseSize-showCrosshairs"></div>
 		<div class="gpiic-increaseSize-magnifierFollows"></div>
 		<div class="gpiic-increaseSize-screenReaderFollows"></div>
+		<div class="gpiic-contrast"></div>
     </div>
     <div class="fl-container-flex35 fl-force-right">
         <div class="fl-prefsEditor-buttons">
