GPII-271: Animation for VisualAlternatives complete, altogether with adding appropriate names for the events.

--- a/demos/pcp/index.html
+++ b/demos/pcp/index.html
@@ -12,12 +12,13 @@
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="../../src/shared/adjusters/pcp/css/style.css" />
 
+        <script type="text/javascript" src="../../src/shared/lib/infusion/MyInfusion.js"></script>
+
         <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
         <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
         <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
-        <script type="text/javascript" src="../../src/shared/adjusters/pcp/js/combobox.js"></script>
 
-        <script type="text/javascript" src="../../src/shared/lib/infusion/MyInfusion.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/pcp/js/combobox.js"></script>
 
         <script type="text/javascript" src="../../src/pcp/schemas.js"></script>
         <script type="text/javascript" src="../../src/shared/adjusters/pcp/js/textfieldStepper.js"></script>
@@ -27,7 +28,7 @@
 
         <script type="text/javascript" src="demo.js"></script>
 
-        <title>Speak Text Demo</title>
+        <title>New adjusters Demo</title>
 
         <script type="text/javascript">
             $(document).ready(function () {
@@ -36,7 +37,7 @@
         </script>
     </head>
     <body>
-        <h1>Demo of the Speak Text adjuster group</h1>
+        <h1>Demo of the new adjusters</h1>
         <div class="flc-uiOptions"></div>
     </body>
 </html>
