--- a/src/pcp/newestSpeakText.html
+++ b/src/pcp/newestSpeakText.html
@@ -2,10 +2,10 @@
     <div class="flc-uiOptions-controls">
         <div class="fl-prefsEditor-category">
 
-            <input type="checkbox" id="presetButton" class="gpii-speakTextPresetButton"/>
-            <label for="presetButton" class="gpii-speakTextPresetButton-label preset-button-label"></label>
-            <label for="presetButton" class="white-baloon-icon"></label>
-            <label for="presetButton" class="white-tick-icon"></label><br>
+            <input type="checkbox" id="visualAlternativesPresetButton" class="gpii-speakTextPresetButton"/>
+            <label for="visualAlternativesPresetButton" class="gpii-speakTextPresetButton-label preset-button-label"></label>
+            <label for="visualAlternativesPresetButton" class="white-baloon-icon"></label>
+            <label for="visualAlternativesPresetButton" class="visualAlternatives-white-tick-icon white-tick-icon"></label><br>
             <div class="spacing-ensurer"></div>
 
             <div class="speakText"></div>
@@ -15,13 +15,21 @@
 
             <br>
 
-            <input type="checkbox" class=""/>
-            <label class="gpii-volumePresetButton-label preset-button-label"></label>
-            <label class="white-baloon-icon"></label>
-            <label class=""></label><br>
+            <input type="checkbox" id="volumePresetButton" class="gpii-volumePresetButton"/>
+            <label for="volumePresetButton" class="gpii-volumePresetButton-label preset-button-label"></label>
+            <label for="volumePresetButton" class="white-baloon-icon"></label>
+            <label for="volumePresetButton" class=""></label><br>
             <div class="spacing-ensurer"></div><br>
 
             <div class="universalVolume"></div>
+
+            <input type="checkbox" id="languagePresetButton" class="gpii-languagePresetButton"/>
+            <label for="languagePresetButton" class="gpii-languagePresetButton-label preset-button-label"></label>
+            <label for="languagePresetButton" class="white-baloon-icon"></label>
+            <label for="languagePresetButton" class=""></label><br>
+            <div class="spacing-ensurer"></div><br>
+
+            <div class="universalLanguage"></div>
         </div>
     </div>
 </form>
