--- a/src/shared/adjusters/html/PrefsEditorTemplate-contrastTheme.html
+++ b/src/shared/adjusters/html/PrefsEditorTemplate-contrastTheme.html
@@ -1,7 +1,7 @@
 <div class="flc-prefsEditor-themeRow fl-choice">
     <input type="radio" class="flc-prefsEditor-themeInput fl-hidden-accessible" name="theme" id="bw" value="bw" />
-    <div class="fl-indicator"></div>
-    <label for="bw" class="flc-prefsEditor-theme-label fl-theme-prefsEditor-bw">
+    <div class="fl-indicator gpii-contrastThemeIndicator"></div>
+    <label for="bw" class="flc-prefsEditor-theme-label fl-theme-prefsEditor-bw gpii-contrastThemeLabel">
         <span class="fl-preview-A"></span>
         <span class="fl-hidden-accessible"></span>
         <div class="fl-crossout"></div>
