Implemented the contrastTheme enactor.

--- a/demos/adjustersPilots2/index.html
+++ b/demos/adjustersPilots2/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/preferences/css/fss/fss-theme-lgdg-prefsEditor.css" />
     <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/preferences/css/fss/fss-theme-dglg-prefsEditor.css" />
     <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/preferences/css/fss/fss-theme-yb-prefsEditor.css" />
+    <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/preferences/css/fss/fss-theme-by-prefsEditor.css" />
     <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/preferences/css/PrefsEditor.css" />
     <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/preferences/css/FullPrefsEditor.css" />
 
@@ -38,7 +39,7 @@
     <script type="text/javascript" src="../../src/shared/adjusters/js/ContrastThemeAdjuster.js"></script>
 
     <!-- The JS files of the enactors of my custom adjusters -->
-    <!-- <script type="text/javascript" src="../../src/shared/enactors/js/ContrastEnactor.js"></script> -->
+    <script type="text/javascript" src="../../src/shared/enactors/js/ContrastThemeEnactor.js"></script>
 
     <!-- Pilot2Adjusters-specific files -->
     <script type="text/javascript" src="../../src/pilot2Adjusters/js/Pilot2AdjustersSchema.js"></script>
