--- a/demos/adjustersPilots2/index.html
+++ b/demos/adjustersPilots2/index.html
@@ -3,7 +3,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Cloud4All adjusters for Pilot 2 phase</title>
 
-    <!-- The needed UIO CSS files -->
+    <!-- The needed prefsEditor CSS files -->
     <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/fss/css/fss-reset-global.css" />
     <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/fss/css/fss-base-global.css" />
     <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/fss/css/fss-layout.css" />
@@ -50,7 +50,7 @@
 
 <script type="text/javascript">
     $(document).ready(function () {
-        demo.initAdjusters("#myUIOptions");
+        demo.initAdjusters("#myPrefsEditor");
     })
 </script>
 
@@ -58,7 +58,7 @@
 <body>
 
     <!-- This is the div that will contain the Prefs Editor component -->
-    <div id="myUIOptions">
+    <div id="myPrefsEditor">
     </div>
 
 </body>
