--- a/src/pmt/html/PMTUIOptions.html
+++ b/src/pmt/html/PMTUIOptions.html
@@ -1,4 +1,4 @@
-<form id="options" action="" class="fl-uiOptions gpii-prefsEditor fl-focus">
+<form id="options" action="" class="fl-prefsEditor gpii-prefsEditor fl-focus">
     <div class="fl-container-flex60 fl-force-left gpii-prefsEditor-preferenceGroup">
 
         <div class="contrastPreferenceGroup">
