GPII-153, GPII-187: more renaming as well as improving gpii.textfieldStepper. myUIOptions -> gpiic-pmt gpii.uiOptions.pmt -> gpii.pmt gpii.uiOptions.enactors -> gpii.enactor gpii.uiOptions.panels -> gpii.adjuster gpii.uiOptions.textfieldStepper -> gpii.textfieldStepper

--- a/demos/pmt/index.html
+++ b/demos/pmt/index.html
@@ -51,7 +51,7 @@
 
 <script type="text/javascript">
     $(document).ready(function () {
-        demo.initPMT("#myUIOptions");
+        demo.initPMT("#gpiic-pmt");
     })
 </script>
 
@@ -59,7 +59,7 @@
 <body>
 
     <!-- This is the div that will contain the UI Options component -->
-    <div id="myUIOptions">
+    <div id="gpiic-pmt">
     </div>
 
 </body>
