Created a separate franes.css file. Started styling on PMT template.

--- a/demos/framesPilots2/pmtDemo.html
+++ b/demos/framesPilots2/pmtDemo.html
@@ -4,6 +4,9 @@
 <meta charset="UTF-8">
 <title></title>
 
+    <!-- All styling for PMT frame is here -->
+    <link rel="stylesheet" type="text/css" href="../../src/shared/frames/css/frames.css" />
+
     <!-- The Infusion Library -->
     <script type="text/javascript" src="../../src/shared/lib/infusion/MyInfusion.js"></script>
 
