--- a/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
@@ -1,13 +1,13 @@
 <form id="options" action="" class="">
     <div>
-        <span>
+        <span class="gpii-prefsEditor-preferenceSetSelectionButton">
             span 1
         </span>
-        <span>
+        <span class="gpii-prefsEditor-preferenceSetSelectionButton">
             span 2
         </span>
     </div>
-    <div>
+    <div class="gpii-prefsEditor-preferencesContainer">
         div 2
     </div>
     <div>
