Re-arranged font-icons location so they are shared between frames and sdjusters. Styled the PMT frame header.

--- a/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
@@ -1,10 +1,10 @@
-<form id="options" action="" class="">
-    <div>
-        <span class="gpii-prefsEditor-preferenceSetSelectionButton">
-            span 1
+<form id="options" action="" class="gpii-prefsEditor-pmtContainer">
+    <div class="gpii-prefsEditor-preferenceSetSelectionHeader">
+        <span class="gpii-prefsEditor-preferenceSetSelectionButton gpii-prefsEditor-frameIcon gpii-prefsEditor-preferenceSetSelectionButtonMyPreferences gpii-prefsEditor-preferenceSetSelectionButtonSelected">
+            <label>my preferences</label>
         </span>
-        <span class="gpii-prefsEditor-preferenceSetSelectionButton">
-            span 2
+        <span class="gpii-prefsEditor-preferenceSetSelectionButton gpii-prefsEditor-frameIcon gpii-prefsEditor-preferenceSetSelectionButtonAllPreferences gpii-prefsEditor-preferenceSetSelectionButtonGrayed">
+            <label>all preferences</label>
         </span>
     </div>
     <div class="gpii-prefsEditor-preferencesContainer">
