--- a/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
@@ -1,10 +1,10 @@
 <form id="options" action="" class="gpii-prefsEditor-pmtContainer">
     <div class="gpii-prefsEditor-preferenceSetSelectionHeader">
         <span class="gpii-prefsEditor-preferenceSetSelectionButton gpii-prefsEditor-frameIcon gpii-prefsEditor-preferenceSetSelectionButtonMyPreferences gpii-prefsEditor-preferenceSetSelectionButtonSelected">
-            <label>my preferences</label>
+            <label class="gpii-prefsEditor-preferenceSetSelectionButtonLabel">my preferences</label>
         </span>
         <span class="gpii-prefsEditor-preferenceSetSelectionButton gpii-prefsEditor-frameIcon gpii-prefsEditor-preferenceSetSelectionButtonAllPreferences gpii-prefsEditor-preferenceSetSelectionButtonGrayed">
-            <label>all preferences</label>
+            <label class="gpii-prefsEditor-preferenceSetSelectionButtonLabel">all preferences</label>
         </span>
     </div>
     <div class="gpii-prefsEditor-preferencesContainer">
