Created a messages.js file with reusable logic. Extracted the my/all preferences texts to json files.

--- a/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
@@ -1,10 +1,10 @@
 <form id="options" action="" class="gpii-prefsEditor-pmtContainer">
     <div class="gpii-prefsEditor-preferenceSetSelectionHeader">
         <span class="gpii-prefsEditor-preferenceSetSelectionButton gpii-prefsEditor-frameIcon gpii-prefsEditor-preferenceSetSelectionButtonMyPreferences gpii-prefsEditor-preferenceSetSelectionButtonSelected">
-            <label class="gpii-prefsEditor-preferenceSetSelectionButtonLabel">my preferences</label>
+            <label class="gpiic-pmt-preferenceSetSelectionButtonMyPreferencesLabel gpii-prefsEditor-preferenceSetSelectionButtonLabel"></label>
         </span>
         <span class="gpii-prefsEditor-preferenceSetSelectionButton gpii-prefsEditor-frameIcon gpii-prefsEditor-preferenceSetSelectionButtonAllPreferences gpii-prefsEditor-preferenceSetSelectionButtonGrayed">
-            <label class="gpii-prefsEditor-preferenceSetSelectionButtonLabel">all preferences</label>
+            <label class="gpiic-pmt-preferenceSetSelectionButtonAllPreferencesLabel gpii-prefsEditor-preferenceSetSelectionButtonLabel"></label>
         </span>
     </div>
     <div class="gpii-prefsEditor-preferencesContainer">
