--- a/demos/framesPilots2/pmtDemo.html
+++ b/demos/framesPilots2/pmtDemo.html
@@ -13,6 +13,9 @@
     <!-- The i18n JS files -->
     <script type="text/javascript" src="../../src/shared/i18n/js/i18n.js"></script>
 
+    <!-- The messages JS files -->
+    <script type="text/javascript" src="../../src/shared/messages/js/messages.js"></script>
+
     <!-- Pilot2Adjusters-specific files -->
     <script type="text/javascript" src="../../src/pilot2Frames/pmt/js/Pilot2PMTSchema.js"></script>
     <script type="text/javascript" src="../../src/pilot2Frames/pmt/js/Pilot2PMTDefaults.js"></script>
