--- a/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
@@ -8,7 +8,9 @@
         </span>
     </div>
     <div class="gpii-prefsEditor-preferencesContainer">
-        div 2
+        <div class="gpii-prefsEditor-preferences">
+            Preferences will appear here...
+        </div>
     </div>
     <div>
         div 3
