Created the "save & apply" button.

--- a/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
@@ -12,7 +12,9 @@
             Preferences will appear here...
         </div>
     </div>
-    <div>
-        div 3
+    <div class="gpii-pmt-bottomRow">
+        <span class="gpiic-pmt-saveAndApplyButton gpii-pmt-saveAndApplyButton">
+            aaa
+        </span>
     </div>
 </form>
