The default prefsEditor "Save" button is hidden and backed-up by a label with "for" attribute.

--- a/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
@@ -13,8 +13,8 @@
         </div>
     </div>
     <div class="gpii-pmt-bottomRow">
-        <span class="gpiic-pmt-saveAndApplyButton gpii-pmt-saveAndApplyButton">
-            aaa
-        </span>
+        <input id="pmtSaveButton" class="flc-prefsEditor-save fl-prefsEditor-save gpii-prefsEditor-save" type="button" value="" />
+        <label for="pmtSaveButton" class="gpiic-pmt-saveAndApplyButton gpii-pmt-saveAndApplyButton">
+        </label>
     </div>
 </form>
