Added font icon to the "save & apply" button. Note that currently we are missing the "cloud" font icon.

--- a/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
@@ -14,7 +14,9 @@
     </div>
     <div class="gpii-pmt-bottomRow">
         <input id="pmtSaveButton" class="flc-prefsEditor-save fl-prefsEditor-save gpii-prefsEditor-save" type="button" value="" />
-        <label for="pmtSaveButton" class="gpiic-pmt-saveAndApplyButton gpii-pmt-saveAndApplyButton">
-        </label>
+            <label for="pmtSaveButton" class="gpii-prefsEditor-frameIcon gpii-pmt-saveAndApplyButton">
+                <label class="gpiic-pmt-saveAndApplyButtonLabel gpii-pmt-saveAndApplyButtonLabel">
+                </label>
+            </label>
     </div>
 </form>
