GPII-271: Animation of Volume and Language added. TODO: Clear code repetitions

--- a/src/pcp/newestSpeakText.html
+++ b/src/pcp/newestSpeakText.html
@@ -18,7 +18,7 @@
             <input type="checkbox" id="volumePresetButton" class="gpii-volumePresetButton"/>
             <label for="volumePresetButton" class="gpii-volumePresetButton-label preset-button-label"></label>
             <label for="volumePresetButton" class="white-baloon-icon"></label>
-            <label for="volumePresetButton" class=""></label><br>
+            <label for="volumePresetButton" class="universalVolume-white-tick-icon white-tick-icon"></label><br>
             <div class="spacing-ensurer"></div><br>
 
             <div class="universalVolume"></div>
@@ -26,7 +26,7 @@
             <input type="checkbox" id="languagePresetButton" class="gpii-languagePresetButton"/>
             <label for="languagePresetButton" class="gpii-languagePresetButton-label preset-button-label"></label>
             <label for="languagePresetButton" class="white-baloon-icon"></label>
-            <label for="languagePresetButton" class=""></label><br>
+            <label for="languagePresetButton" class="universalLanguage-white-tick-icon white-tick-icon"></label><br>
             <div class="spacing-ensurer"></div><br>
 
             <div class="universalLanguage"></div>
