--- a/src/shared/adjusters/pcp/html/universalLanguageTemplate.html
+++ b/src/shared/adjusters/pcp/html/universalLanguageTemplate.html
@@ -1,4 +1,4 @@
-<div class="gpii-speakText-adjusters ui-widget">
+<div class="gpii-speakText-adjusters gpii-language-partially-expanded ui-widget">
 	<label class="gpiic-speakText-auditoryOutLanguage-label gpii-speakText-label"></label><br>
 	<select class="gpiic-speakText-auditoryOutLanguage"></select>
 </div>
