GPII-271: Animation bug related to saving when the extra adjusters are showed fixed, font icons added.

--- a/src/pcp/newestSpeakText.html
+++ b/src/pcp/newestSpeakText.html
@@ -4,7 +4,7 @@
 
             <input type="checkbox" id="visualAlternativesPresetButton" class="gpii-speakTextPresetButton"/>
             <label for="visualAlternativesPresetButton" class="gpii-speakTextPresetButton-label preset-button-label"></label>
-            <label for="visualAlternativesPresetButton" class="white-baloon-icon"></label>
+            <label for="visualAlternativesPresetButton" class="visualAlternatives-main-icon main-icon"></label>
             <label for="visualAlternativesPresetButton" class="visualAlternatives-white-tick-icon white-tick-icon"></label><br>
             <div class="spacing-ensurer"></div>
 
@@ -17,7 +17,7 @@
 
             <input type="checkbox" id="volumePresetButton" class="gpii-volumePresetButton"/>
             <label for="volumePresetButton" class="gpii-volumePresetButton-label preset-button-label"></label>
-            <label for="volumePresetButton" class="white-baloon-icon"></label>
+            <label for="volumePresetButton" class="volume-main-icon main-icon"></label>
             <label for="volumePresetButton" class="universalVolume-white-tick-icon white-tick-icon"></label><br>
             <div class="spacing-ensurer"></div><br>
 
@@ -25,7 +25,7 @@
 
             <input type="checkbox" id="languagePresetButton" class="gpii-languagePresetButton"/>
             <label for="languagePresetButton" class="gpii-languagePresetButton-label preset-button-label"></label>
-            <label for="languagePresetButton" class="white-baloon-icon"></label>
+            <label for="languagePresetButton" class="language-main-icon main-icon"></label>
             <label for="languagePresetButton" class="universalLanguage-white-tick-icon white-tick-icon"></label><br>
             <div class="spacing-ensurer"></div><br>
 
