--- a/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
@@ -13,10 +13,8 @@
         </div>
     </div>
     <div class="gpii-pmt-bottomRow">
-        <input id="pmtSaveButton" class="flc-prefsEditor-save fl-prefsEditor-save gpii-prefsEditor-save" type="button" value="" />
-            <label for="pmtSaveButton" class="gpii-prefsEditor-frameIcon gpii-pmt-saveAndApplyButton">
-                <label class="gpiic-pmt-saveAndApplyButtonLabel gpii-pmt-saveAndApplyButtonLabel">
-                </label>
-            </label>
+        <label for="pmtSaveButton" class="gpii-prefsEditor-frameIcon gpii-pmt-saveAndApplyButtonLabel">
+        </label>
+        <input id="pmtSaveButton" class="flc-prefsEditor-save fl-prefsEditor-save gpii-prefsEditor-save" type="button" value="save & apply" />
     </div>
 </form>
