--- a/demos/framesPilots2/pmtDemo.html
+++ b/demos/framesPilots2/pmtDemo.html
@@ -4,6 +4,10 @@
 <meta charset="UTF-8">
 <title></title>
 
+    <!-- Needed fonts from Google -->
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
+    
     <!-- All styling for PMT frame is here -->
     <link rel="stylesheet" type="text/css" href="../../src/shared/frames/css/frames.css" />
 
