--- a/demos/pcp/index.html
+++ b/demos/pcp/index.html
@@ -10,7 +10,7 @@
 
         <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,700' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" type="text/css" href="../../src/shared/adjusters/pcp/css/style.css" />
+        <link rel="stylesheet" type="text/css" href="../../src/shared/adjusters/css/style.css" />
 
         <script type="text/javascript" src="../../src/shared/lib/infusion/MyInfusion.js"></script>
 
@@ -18,13 +18,13 @@
         <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
         <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 
-        <script type="text/javascript" src="../../src/shared/adjusters/pcp/js/combobox.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/combobox.js"></script>
 
-        <script type="text/javascript" src="../../src/pcp/schemas.js"></script>
-        <script type="text/javascript" src="../../src/shared/adjusters/pcp/js/textfieldStepper.js"></script>
-        <script type="text/javascript" src="../../src/shared/adjusters/pcp/js/speakTextPanels.js"></script>
+        <script type="text/javascript" src="../../src/pcp/pcpSchemas.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/textfieldStepper.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/speakTextPanels.js"></script>
 
-        <script type="text/javascript" src="../../src/shared/adjusters/pcp/js/speakText.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/speakText.js"></script>
 
         <script type="text/javascript" src="demo.js"></script>
 
