--- a/demos/pcp/index.html
+++ b/demos/pcp/index.html
@@ -22,10 +22,9 @@
 
         <script type="text/javascript" src="../../src/pcp/pcpSchemas.js"></script>
         <script type="text/javascript" src="../../src/shared/adjusters/js/textfieldStepper.js"></script>
-        <script type="text/javascript" src="../../src/shared/adjusters/js/speakTextPanels.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/Panels.js"></script>
 
-        <script type="text/javascript" src="../../src/shared/adjusters/js/speakText.js"></script>
-
+        <script type="text/javascript" src="../../src/pcp/prefsEditor.js"></script>
         <script type="text/javascript" src="demo.js"></script>
 
         <title>New adjusters Demo</title>
