--- a/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
@@ -13,8 +13,11 @@
         </div>
     </div>
     <div class="gpii-pmt-bottomRow">
-        <label for="pmtSaveButton" class="gpii-prefsEditor-frameIcon gpii-pmt-saveAndApplyButtonLabel">
-        </label>
-        <input id="pmtSaveButton" class="flc-prefsEditor-save fl-prefsEditor-save gpii-prefsEditor-save" type="button" value="save & apply" />
+        <span class="gpii-prefsEditor-messageLine">aaa aaa aaa aaa</span>
+        <span class="gpii-prefsEditor-saveButtonContainer">
+            <label for="pmtSaveButton" class="gpii-prefsEditor-frameIcon gpii-pmt-saveAndApplyButtonLabel">
+            </label>
+            <input id="pmtSaveButton" class="flc-prefsEditor-save fl-prefsEditor-save gpii-prefsEditor-save" type="button" value="save & apply" />
+        </span>
     </div>
 </form>
