--- a/demos/pmt/index.html
+++ b/demos/pmt/index.html
@@ -3,7 +3,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Preferences Management Tool</title>
 
-    <!-- The needed UIO CSS files -->
+    <!-- The needed infusion CSS files -->
     <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/fss/css/fss-reset-global.css" />
     <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/fss/css/fss-base-global.css" />
     <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/fss/css/fss-layout.css" />
@@ -43,7 +43,8 @@
     <script type="text/javascript" src="../../src/shared/enactors/js/MagnifierEnactor.js"></script>
 
     <!-- PMT-specific files -->
-    <script type="text/javascript" src="../../src/pmt/js/PMTUIOSchema.js"></script>
+    <script type="text/javascript" src="../../src/shared/schemas/js/primarySchema.js"></script>
+    <script type="text/javascript" src="../../src/shared/schemas/js/pmtSchema.js"></script>
     <script type="text/javascript" src="../../src/pmt/js/PMT.js"></script>
 
     <!-- The demo script -->
