Working on jQuery dialog modal notification.

--- a/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
@@ -19,5 +19,13 @@
             </label>
             <input id="pmtSaveButton" class="flc-prefsEditor-save fl-prefsEditor-save gpii-prefsEditor-save" type="button" value="save & apply" />
         </span>
+        <div class="gpii-prefsEditor-notification gpiic-prefsEditor-notification">
+            <h2><div>Preferences have been saved to the cloud and applied to this device.</div></h2>
+            <div class="gpii-prefsEditor-notificationMessage">To apply preferences on other devices, save this token: <label> TOKEN NUMBER </label> to a USB or RFID reader.</div>
+            <br/>
+            <div class="gpii-prefsEditor-notificationConfirmationArea">
+                <div class="gpii-prefsEditor-notificationConfirmButton gpiic-prefsEditor-notificationConfirmButton">got it</div>
+            </div>
+        </div>
     </div>
 </form>
