Working on jQuery dialog modal notification.

--- a/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
@@ -20,11 +20,13 @@
             <input id="pmtSaveButton" class="flc-prefsEditor-save fl-prefsEditor-save gpii-prefsEditor-save" type="button" value="save & apply" />
         </span>
         <div class="gpii-prefsEditor-notification gpiic-prefsEditor-notification">
-            <h2><div>Preferences have been saved to the cloud and applied to this device.</div></h2>
-            <div class="gpii-prefsEditor-notificationMessage">To apply preferences on other devices, save this token: <label> TOKEN NUMBER </label> to a USB or RFID reader.</div>
-            <br/>
+            <h2><div class="gpiic-prefsEditor-notificationTitle"></div></h2>
+            <label class="gpii-prefsEditor-notificationMessage gpiic-prefsEditor-notificationMessagePart1"></label>
+            <label class="gpii-prefsEditor-notificationMessage gpii-prefsEditor-notificationMessageTOKEN gpiic-prefsEditor-notificationMessagePart2"></label>
+            <label class="gpii-prefsEditor-notificationMessage gpiic-prefsEditor-notificationMessagePart3"></label>
+            <br/><br/>
             <div class="gpii-prefsEditor-notificationConfirmationArea">
-                <div class="gpii-prefsEditor-notificationConfirmButton gpiic-prefsEditor-notificationConfirmButton">got it</div>
+                <div class="gpii-prefsEditor-notificationConfirmButton gpiic-prefsEditor-notificationConfirmButton"></div>
             </div>
         </div>
     </div>
