--- a/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
@@ -1,4 +1,9 @@
 <form id="options" action="" class="gpii-prefsEditor-pmtContainer">
+    <div class="gpii-prefsEditor-userStatusBar">
+        <label class="gpii-prefsEditor-userLogoutLink">
+            log-out
+        </label>
+    </div>
     <div class="gpii-prefsEditor-preferenceSetSelectionHeader">
         <span class="gpii-prefsEditor-preferenceSetSelectionButton gpii-prefsEditor-frameIcon gpii-prefsEditor-preferenceSetSelectionButtonMyPreferences gpii-prefsEditor-preferenceSetSelectionButtonSelected">
             <label class="gpiic-pmt-preferenceSetSelectionButtonMyPreferencesLabel gpii-prefsEditor-preferenceSetSelectionButtonLabel"></label>
