--- a/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
@@ -1,8 +1,6 @@
 <form id="options" action="" class="gpii-prefsEditor-pmtContainer">
     <div class="gpii-prefsEditor-userStatusBar">
-        <label class="gpii-prefsEditor-userLogoutLink">
-            log-out
-        </label>
+        <label class="gpii-prefsEditor-userLogoutLink gpiic-prefsEditor-userLogoutLink"></label>
     </div>
     <div class="gpii-prefsEditor-preferenceSetSelectionHeader">
         <span class="gpii-prefsEditor-preferenceSetSelectionButton gpii-prefsEditor-frameIcon gpii-prefsEditor-preferenceSetSelectionButtonMyPreferences gpii-prefsEditor-preferenceSetSelectionButtonSelected">
