Hide status bar onReady. Show status bar on "got it".

--- a/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
@@ -1,5 +1,5 @@
 <form id="options" action="" class="gpii-prefsEditor-pmtContainer">
-    <div class="gpii-prefsEditor-userStatusBar">
+    <div class="gpii-prefsEditor-userStatusBar gpiic-prefsEditor-userStatusBar">
         <label class="gpii-prefsEditor-userLogoutLink gpiic-prefsEditor-userLogoutLink"></label>
     </div>
     <div class="gpii-prefsEditor-preferenceSetSelectionHeader">
