--- a/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
@@ -1,6 +1,6 @@
 <form id="options" action="" class="gpii-prefsEditor-pmtContainer">
     <div class="gpii-prefsEditor-userStatusBar gpiic-prefsEditor-userStatusBar">
-        <label class="gpii-prefsEditor-userLogoutLink gpiic-prefsEditor-userLogoutLink"></label>
+        <label for="pmtResetButton" class="gpii-prefsEditor-userLogoutLink gpiic-prefsEditor-userLogoutLink"></label>
     </div>
     <div class="gpii-prefsEditor-preferenceSetSelectionHeader">
         <span class="gpii-prefsEditor-preferenceSetSelectionButton gpii-prefsEditor-frameIcon gpii-prefsEditor-preferenceSetSelectionButtonMyPreferences gpii-prefsEditor-preferenceSetSelectionButtonSelected">
@@ -21,6 +21,7 @@
             <label for="pmtSaveButton" class="gpii-prefsEditor-frameIcon gpii-pmt-saveAndApplyButtonLabel">
             </label>
             <input id="pmtSaveButton" class="flc-prefsEditor-save fl-prefsEditor-save gpii-prefsEditor-save" type="button" value="save & apply" />
+            <input id="pmtResetButton" class="flc-prefsEditor-reset gpii-prefsEditor-reset" type="button" value="" />
         </span>
         <div class="gpii-prefsEditor-notification gpiic-prefsEditor-notification">
             <h2><div class="gpiic-prefsEditor-notificationTitle"></div></h2>
