Added a merge policy which finally is of no use. Leave it here for future reference though.

--- a/demos/framesPilots2/pmtDemo.html
+++ b/demos/framesPilots2/pmtDemo.html
@@ -15,6 +15,9 @@
     <!-- The Infusion Library -->
     <script type="text/javascript" src="../../src/shared/lib/infusion/MyInfusion.js"></script>
 
+    <!-- The mergePolicies JS files -->
+    <script type="text/javascript" src="../../src/shared/helpers/mergePolicies.js"></script>
+
     <!-- The i18n JS files -->
     <script type="text/javascript" src="../../src/shared/i18n/js/i18n.js"></script>
 
