Logout link is not bound to "reset". Added a "onLogout" event which is triggered on logout link click and reloads the page.

--- a/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
@@ -1,6 +1,6 @@
 <form id="options" action="" class="gpii-prefsEditor-pmtContainer">
     <div class="gpii-prefsEditor-userStatusBar gpiic-prefsEditor-userStatusBar">
-        <label for="pmtResetButton" class="gpii-prefsEditor-userLogoutLink gpiic-prefsEditor-userLogoutLink"></label>
+        <label class="gpii-prefsEditor-userLogoutLink gpiic-prefsEditor-userLogoutLink"></label>
     </div>
     <div class="gpii-prefsEditor-preferenceSetSelectionHeader">
         <span class="gpii-prefsEditor-preferenceSetSelectionButton gpii-prefsEditor-frameIcon gpii-prefsEditor-preferenceSetSelectionButtonMyPreferences gpii-prefsEditor-preferenceSetSelectionButtonSelected">
