--- a/src/shared/adjusters/html/speakTextCollectiveTemplate.html
+++ b/src/shared/adjusters/html/speakTextCollectiveTemplate.html
@@ -8,85 +8,85 @@
 <label for="presetButton" class="white-tick-icon"></label><br>
 <div class="spacing-ensurer"></div>
 
-<div class="preference">
-    <div class="fully-expanded speakText-screenReaderTTSEnabled-element">
-        <h3><label for="screenReaderTTSEnabled" class="gpii-screenReaderTTSEnabled-label switch"></label></h3>
-        <div id="screen-reader-onoff" class="fl-prefsEditor-onoff">
-            <input type="checkbox" id="screenReaderTTSEnabled" class="gpii-screenReaderTTSEnabled"/>
+<div class="gpii-speakText-adjusters">
+    <div class="gpii-speakText-fully-expanded gpii-speakText-screenReaderTTSEnabled-element">
+        <h3><label for="screenReaderTTSEnabled" class="gpiic-speakText-screenReaderTTSEnabled-label gpii-speakText-switch"></label></h3>
+        <div id="gpii-speakText-screenReaderOnOff" class="fl-uiOptions-onoff">
+            <input type="checkbox" id="screenReaderTTSEnabled" class="gpiic-speakText-screenReaderTTSEnabled"/>
             <label for="screenReaderTTSEnabled">
-                <span class="fl-prefsEditor-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF" tabindex="0">
-                    <span class="fl-prefsEditor-switch-inner"></span>
+                <span class="fl-uiOptions-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF" tabindex="0">
+                    <span class="fl-uiOptions-switch-inner"></span>
                 </span>
             </label>
         </div><br><br><br>
     </div>
 
-    <div class="partially-expanded">
-        <div class="speakText-speechRate-element">
-            <div class="gpii-speechRate">
-                <label class="gpii-speechRate-label speak-text-label" for="speech-rate-input" id="speechRateLabel"></label><br>
-                <label class="gpii-textfieldStepper-decrement gpii-speechRate-minus" id="speechRateMinus"></label>
+    <div class="gpii-speakText-partially-expanded">
+        <div class="gpii-speakText-speechRate-element">
+            <div class="gpiic-speakText-speechRate">
+                <label class="gpiic-speakText-speechRate-label gpii-speakText-label"></label><br>
+                <label class="gpiic-speakText-textfieldStepper-decrement gpiic-speakText-speechRate-minus" id="speechRateMinus"></label>
                 <input type="text" class="gpii-textfieldStepper-field fl-inputs" id="speechRate"/>
-                <label class="gpii-textfieldStepper-increment gpii-speechRate-plus" id="speechRatePlus"></label>
+                <label class="gpiic-speakText-textfieldStepper-increment gpiic-speakText-speechRate-plus" id="speechRatePlus"></label>
             </div>
         </div><br>
     </div>
 
-    <div class="fully-expanded">
-        <div class="speakText-auditoryOutLanguage-element ui-widget">
-          <label class="gpii-auditoryOutLanguage-label speak-text-label"></label><br>
-          <select class="gpii-auditoryOutLanguage"></select>
+    <div class="gpii-speakText-fully-expanded">
+        <div class="ui-widget">
+          <label class="gpiic-speakText-auditoryOutLanguage-label gpii-speakText-label"></label><br>
+          <select class="gpiic-speakText-auditoryOutLanguage"></select>
         </div><br>
 
-        <div class="speak-text-label"> Announce </div>
-        <div class="speakText-punctuationVerbosity-element">
-            <label class="gpii-punctuationVerbosity-label speak-text-description"></label>
-            <div class="punctuationVerbosity-container">
-                <div class="gpii-punctuationVerbosity-row">
-                    <input type="radio" class="gpii-punctuationVerbosity" name="punctuationVerbosity" id="radioButton-option" value="some" />
-                    <label class="gpii-punctuationVerbosity-option-label" for="radioButton-option"></label>
+        <div class="gpii-speakText-label"> Announce </div>
+        <div>
+            <label class="gpiic-speakText-punctuationVerbosity-label gpii-speakText-description"></label>
+            <div class="gpii-speakText-punctuationVerbosity-container">
+                <div class="gpiic-speakText-punctuationVerbosity-row">
+                    <input type="radio" class="gpiic-speakText-punctuationVerbosity" id="radioButton-option"/>
+                    <label class="gpiic-speakText-punctuationVerbosity-option-label" for="radioButton-option"></label>
                 </div>
             </div>
         </div>
 
-        <div class="speakText-announceCapitals-element">
-            <input type="checkbox" id="announce-uppercase" class="gpii-announceCapitals" tabindex="-1"/>
-            <label for="announce-uppercase" class="checkbox-label" ><span class="gpii-announceCapitals-label checkbox-span" tabindex="0"></span></label>
+        <div>
+            <input type="checkbox" id="announce-capitals" class="gpiic-speakText-announceCapitals"/>
+            <label for="announce-capitals" class="gpii-speakText-checkboxLabel" ><span class="gpiic-speakText-announceCapitals-label gpii-speakText-checkboxSpan"></span></label>
         </div>
 
-        <div class="speakText-speakTutorialMessages-element">
-            <input type="checkbox" id="announce-instructions" class="gpii-speakTutorialMessages" tabindex="-1"/>
-            <label for="announce-instructions" class="checkbox-label" ><span class="gpii-speakTutorialMessages-label checkbox-span" tabindex="0"></span></label>
+        <div>
+            <input type="checkbox" id="speak-tutorial" class="gpiic-speakText-speakTutorialMessages"/>
+            <label for="speak-tutorial" class="gpii-speakText-checkboxLabel" ><span class="gpiic-speakText-speakTutorialMessages-label gpii-speakText-checkboxSpan"></span></label>
         </div><br>
-        <div class="speak-text-label"> Read-back </div>
-        <div class="speakText-keyEcho-element">
-            <input type="checkbox" id="echo-letter" class="gpii-keyEcho" tabindex="-1"/>
-            <label for="echo-letter" class="checkbox-label" ><span class="gpii-keyEcho-label checkbox-span" tabindex="0"></span></label><br>
+        <div class="gpii-speakText-label"> Read-back </div>
+        <div>
+            <input type="checkbox" id="key-echo" class="gpiic-speakText-keyEcho"/>
+            <label for="key-echo" class="gpii-speakText-checkboxLabel" ><span class="gpiic-speakText-keyEcho-label gpii-speakText-checkboxSpan"></span></label><br>
         </div>
 
-        <div class="speakText-wordEcho-element">
-            <input type="checkbox" id="echo-word" class="gpii-wordEcho" tabindex="-1"/>
-            <label for="echo-word" class="checkbox-label" ><span class="gpii-wordEcho-label checkbox-span" tabindex="0"></span></label>
+        <div>
+            <input type="checkbox" id="word-echo" class="gpiic-speakText-wordEcho"/>
+            <label for="word-echo" class="gpii-speakText-checkboxLabel" ><span class="gpiic-speakText-wordEcho-label gpii-speakText-checkboxSpan"></span></label>
         </div>
 
-        <div class="speakText-screenReaderBrailleOutput-element">
-            <h3><label for="braille" class="gpii-screenReaderBrailleOutput-label switch"></label></h3>
-            <div id="braille-onoff" class="fl-prefsEditor-onoff">
-                <input type="checkbox" id="braille" class="gpii-screenReaderBrailleOutput" />
+        <div>
+            <h3><label for="braille" class="gpiic-speakText-screenReaderBrailleOutput-label gpii-speakText-switch"></label></h3>
+            <div id="gpii-speakText-brailleOnOff" class="fl-uiOptions-onoff">
+                <input type="checkbox" id="braille" class="gpiic-speakText-screenReaderBrailleOutput" />
                 <label for="braille">
-                    <span class="fl-prefsEditor-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF">
-                        <span class="fl-prefsEditor-switch-inner"></span>
+                    <span class="fl-uiOptions-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF">
+                        <span class="fl-uiOptions-switch-inner"></span>
                     </span>
                 </label>
             </div><br><br>
-            <div class="gpii-screenReaderBrailleOutput-description speak-text-description"></div>
+            <div class="gpiic-speakText-screenReaderBrailleOutput-description gpii-speakText-description"></div>
         </div>
     </div>
 
-    <div class="partially-expanded">
-        <div class="more-options">
-            <label class="more-options-icon"></label>
-            <label class="more-options-label"></label>
+    <div class="gpii-speakText-partially-expanded">
+        <div class="gpii-speakText-moreOptions">
+            <label class="gpii-speakText-moreOptionsIcon"></label>
+            <label class="gpiic-speakText-moreOptionsLabel"></label>
         </div>
     </div>
 </div>
