Grouped together CSS files.

--- a/demos/framesPilots2/pmtDemo.html
+++ b/demos/framesPilots2/pmtDemo.html
@@ -9,7 +9,7 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
     
     <!-- All styling for PMT frame is here -->
-    <link rel="stylesheet" type="text/css" href="../../src/shared/frames/css/frames.css" />
+    <link rel="stylesheet" type="text/css" href="../../src/shared/css/frames.css" />
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
     
     <!-- The Infusion Library -->
