--- a/src/shared/preview/html/uiOptionsTextPreview.html
+++ b/src/shared/preview/html/uiOptionsTextPreview.html
@@ -2,7 +2,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Preview</title>
-    <link rel="stylesheet" type="text/css" href="../../adjusters/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="../../css/adjusters.css" />
     <link rel="stylesheet" type="text/css" href="../../lib/infusion_old/components/uiOptions/css/fss/fss-theme-yb-uio.css" />
 </head>
 <body class="gpii-prefsEditor-previewPerSettingBody">
