--- a/src/shared/adjusters/html/speakTextCollectiveTemplate.html
+++ b/src/shared/adjusters/html/speakTextCollectiveTemplate.html
@@ -11,11 +11,11 @@
 <div class="gpii-speakText-adjusters">
     <div class="gpii-speakText-fully-expanded gpii-speakText-screenReaderTTSEnabled-element">
         <h3><label for="screenReaderTTSEnabled" class="gpiic-speakText-screenReaderTTSEnabled-label gpii-speakText-switch"></label></h3>
-        <div id="gpii-speakText-screenReaderOnOff" class="fl-uiOptions-onoff">
+        <div id="gpii-speakText-screenReaderOnOff" class="fl-prefsEditor-onoff">
             <input type="checkbox" id="screenReaderTTSEnabled" class="gpiic-speakText-screenReaderTTSEnabled"/>
             <label for="screenReaderTTSEnabled">
-                <span class="fl-uiOptions-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF" tabindex="0">
-                    <span class="fl-uiOptions-switch-inner"></span>
+                <span class="fl-prefsEditor-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF" tabindex="0">
+                    <span class="fl-prefsEditor-switch-inner"></span>
                 </span>
             </label>
         </div><br><br><br>
@@ -71,11 +71,11 @@
 
         <div>
             <h3><label for="braille" class="gpiic-speakText-screenReaderBrailleOutput-label gpii-speakText-switch"></label></h3>
-            <div id="gpii-speakText-brailleOnOff" class="fl-uiOptions-onoff">
+            <div id="gpii-speakText-brailleOnOff" class="fl-prefsEditor-onoff">
                 <input type="checkbox" id="braille" class="gpiic-speakText-screenReaderBrailleOutput" />
                 <label for="braille">
-                    <span class="fl-uiOptions-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF">
-                        <span class="fl-uiOptions-switch-inner"></span>
+                    <span class="fl-prefsEditor-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF">
+                        <span class="fl-prefsEditor-switch-inner"></span>
                     </span>
                 </label>
             </div><br><br>
