GPII-271: Added screenReaderLanguage in PMT, combobox are now activated when being showed, which fixes the 'after saving no combobox' bug.

--- a/demos/pcp/index.html
+++ b/demos/pcp/index.html
@@ -31,12 +31,12 @@
 
         <script type="text/javascript">
             $(document).ready(function () {
-                demo.initGPII(".flc-uiOptions");
+                demo.initGPII(".flc-prefsEditor");
             });
         </script>
     </head>
     <body>
-        <h1>Demo of the new adjusters</h1>
-        <div class="flc-uiOptions"></div>
+        <h1>PCP demo of the new adjusters</h1>
+        <div class="flc-prefsEditor"></div>
     </body>
 </html>
