--- a/src/pmt/pmtContainer.html
+++ b/src/pmt/pmtContainer.html
@@ -12,6 +12,7 @@
             <div class="words-spoken-per-minute"></div>
             <div class="volume"></div>
             <div class="voicePitch"></div>
+            <div class="screenReaderLanguage"></div>
             <div class="braille"></div>
 
             <br>
