Created a fluid.prefs.GPIIEditor which does not "save" onReset. Do not reload page onLogout. Rather invoke "reset" with a "for" attribute.

--- a/demos/framesPilots2/pmtDemo.html
+++ b/demos/framesPilots2/pmtDemo.html
@@ -18,6 +18,9 @@
     <!-- The mergePolicies JS files -->
     <script type="text/javascript" src="../../src/shared/helpers/mergePolicies.js"></script>
 
+    <!-- The GPIIPrefsEditor JS files -->
+    <script type="text/javascript" src="../../src/shared/frames/js/GPIIPrefsEditor.js"></script>
+
     <!-- The i18n JS files -->
     <script type="text/javascript" src="../../src/shared/i18n/js/i18n.js"></script>
 
