GPII-271: The four checkboxes added

--- a/src/pmt/pmtContainer.html
+++ b/src/pmt/pmtContainer.html
@@ -13,6 +13,11 @@
             <div class="volume"></div>
             <div class="voicePitch"></div>
             <div class="screenReaderLanguage"></div>
+            <div class="punctuationVerbosity"></div>
+            <div class="announceCapitals"></div>
+            <div class="speakTutorialMessages"></div>
+            <div class="keyEcho"></div>
+            <div class="wordEcho"></div>
             <div class="braille"></div>
 
             <br>
