First attempt on composite panel. Renamed old increaseSize template and JS.

--- a/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
+++ b/src/pilot2Frames/pmt/html/PrefsEditorTemplate-PMT.html
@@ -11,8 +11,8 @@
         </span>
     </div>
     <div class="gpii-prefsEditor-preferencesContainer">
-        <div class="gpii-prefsEditor-preferences">
-            Preferences will appear here...
+        <div class="gpii-prefsEditor-preferences gpiic-prefsEditor-preferences">
+            
         </div>
     </div>
     <div class="gpii-pmt-bottomRow">
