--- a/demos/framesPilots2/pmtDemo.html
+++ b/demos/framesPilots2/pmtDemo.html
@@ -4,13 +4,26 @@
 <meta charset="UTF-8">
 <title></title>
 
+    <!-- The needed infusion CSS files -->
+    <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/fss/css/fss-reset-global.css" />
+    <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/fss/css/fss-base-global.css" />
+    <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/fss/css/fss-layout.css" />
+    <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/fss/css/fss-text.css" />
+    <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/preferences/css/fss/fss-theme-bw-prefsEditor.css" />
+    <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/preferences/css/fss/fss-theme-wb-prefsEditor.css" />
+    <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/preferences/css/fss/fss-theme-lgdg-prefsEditor.css" />
+    <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/preferences/css/fss/fss-theme-dglg-prefsEditor.css" />
+    <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/preferences/css/fss/fss-theme-yb-prefsEditor.css" />
+    <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/preferences/css/PrefsEditor.css" />
+    <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/framework/preferences/css/FullPrefsEditor.css" />
+
     <!-- Needed fonts from Google -->
     <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
     
     <!-- All styling for PMT frame is here -->
     <link rel="stylesheet" type="text/css" href="../../src/shared/frames/css/frames.css" />
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+    <link rel="stylesheet" type="text/css" href="../../src/shared/adjusters/css/adjusters.css" />
     
     <!-- The Infusion Library -->
     <script type="text/javascript" src="../../src/shared/lib/infusion/MyInfusion.js"></script>
@@ -25,6 +38,9 @@
     <script type="text/javascript" src="../../src/shared/i18n/js/i18n.js"></script>
 
     <!-- Pilot2Adjusters-specific files -->
+    <script type="text/javascript" src="../../src/shared/adjusters/js/increaseSize.js"></script>
+    <script type="text/javascript" src="../../src/shared/adjusters/js/cursorSize.js"></script>
+
     <script type="text/javascript" src="../../src/pilot2Frames/pmt/js/Pilot2PMTSchema.js"></script>
     <script type="text/javascript" src="../../src/pilot2Frames/pmt/js/Pilot2PMTDefaults.js"></script>
 
