Styling corrections on frame and cursorSize.

--- a/demos/framesPilots2/pmtDemo.html
+++ b/demos/framesPilots2/pmtDemo.html
@@ -24,6 +24,7 @@
     <!-- All styling for PMT frame is here -->
     <link rel="stylesheet" type="text/css" href="../../src/shared/frames/css/frames.css" />
     <link rel="stylesheet" type="text/css" href="../../src/shared/adjusters/css/adjusters.css" />
+    <!-- <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" /> -->
     
     <!-- The Infusion Library -->
     <script type="text/javascript" src="../../src/shared/lib/infusion/MyInfusion.js"></script>
