Cannot make the cursorSize enactor work.

--- a/demos/framesPilots2/pmtDemo.html
+++ b/demos/framesPilots2/pmtDemo.html
@@ -41,6 +41,8 @@
     <script type="text/javascript" src="../../src/shared/adjusters/js/increaseSize.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/cursorSize.js"></script>
 
+    <script type="text/javascript" src="../../src/shared/enactors/js/cursorSize.js"></script>
+
     <script type="text/javascript" src="../../src/pilot2Frames/pmt/js/Pilot2PMTSchema.js"></script>
     <script type="text/javascript" src="../../src/pilot2Frames/pmt/js/Pilot2PMTDefaults.js"></script>
 
