GPII-153, GPII-187: Half-way applying composite panel to PMT "increase size" panel. Not working yet.

--- a/src/pmt/html/PMT.html
+++ b/src/pmt/html/PMT.html
@@ -2,14 +2,14 @@
     <div class="fl-container-flex60 fl-force-left gpii-prefsEditor-preferenceGroup">
 
         <div class="contrastPreferenceGroup">
-            <div class="gpii-prefsEditor-contrastPanel"></div>
+            <div class="gpiic-prefsEditor-contrastPanel gpii-prefsEditor-contrastPanel"></div>
         </div>
 
     </div>
-    
+
     <div class="fl-container-flex60 fl-force-left gpii-prefsEditor-preferenceGroup">
-    
-    	<div class="gpii-prefsEditor-increaseSizePanel">
+
+    	<div class="gpiic-prefsEditor-increaseSizePanel gpii-prefsEditor-increaseSizePanel">
     	</div>
     </div>
 
