--- a/src/shared/adjusters/html/magnifierTemplate.html
+++ b/src/shared/adjusters/html/magnifierTemplate.html
@@ -1,12 +1,15 @@
-<div class="flc-prefsEditor-magnifier">
-    <h2><!-- <span class="fl-icon-size"></span> --><label class="flc-prefsEditor-magnifier-label" for="magnifier"></label></h2>
-    <div class="fl-inputs">
-        <div class="fl-force-left">
-            <div class="flc-textfieldSlider-slider fl-force-left fl-slider gpii-slider gpii-slider-horz"> </div>
+        <div class="flc-prefsEditor-plus-minus-numerical">
+            <h2><label class="gpiic-increaseSize-plusMinusNumericalLabelMagnifier"></label></h2>
+            
+            <div class="gpii-prefsEditor-previewPerSettingContainer">
+                <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingEye"></div>
+                <div class="gpii-prefsEditor-previewPerSettingEyeBackground"></div>
+                <iframe class="gpii-prefsEditor-previewPerSettingFrame gpiic-increaseSize-previewPerSettingFrameMagnifier" src="" frameborder="0"></iframe>
+            </div>
+        
+            <div class="gpii-increaseSize-plusMinusNumericalWidget">
+                <label class="gpii-increaseSize-plusMinusNumericalMinus gpiic-increaseSize-plusMinusNumericalMinusMagnifier"></label>
+                <input type="text" class="gpii-increaseSize-plusMinusNumericalValue gpiic-increaseSize-plusMinusNumericalValueMagnifier fl-inputs"/>
+                <label class="gpii-increaseSize-plusMinusNumericalPlus gpiic-increaseSize-plusMinusNumericalPlusMagnifier"></label>
+            </div>
         </div>
-        <div class="fl-slider-input gpii-slider-input" style=""><input id="magnifier" class="flc-textfieldSlider-field" type="text" /></div>
-        <br/>
-        <div class="fl-force-left fl-icon-magnifierOFF"></div>
-        <div class="fl-force-right fl-icon-magnifierMAX"></div>            
-    </div>
-</div>
