NOJIRA: Removed some useless parts of code.

--- a/demos/pmt/index.html
+++ b/demos/pmt/index.html
@@ -42,6 +42,9 @@
     <script type="text/javascript" src="../../src/shared/enactors/js/cursorSize.js"></script>
     <script type="text/javascript" src="../../src/shared/enactors/js/magnifier.js"></script>
 
+    <!-- The i18n JS files -->
+    <script type="text/javascript" src="../../src/shared/i18n/js/i18n.js"></script>
+
     <!-- PMT-specific files -->
     <script type="text/javascript" src="../../src/shared/schemas/js/primarySchema.js"></script>
     <script type="text/javascript" src="../../src/shared/schemas/js/pmtSchema.js"></script>
