GPII-271: Test Highlight added.

--- a/src/pmt/pmtContainer.html
+++ b/src/pmt/pmtContainer.html
@@ -18,6 +18,7 @@
             <div class="speakTutorialMessages"></div>
             <div class="keyEcho"></div>
             <div class="wordEcho"></div>
+            <div class="textHighlighting"></div>
             <div class="braille"></div>
 
             <br>
