--- a/src/pmt/pmtContainer.html
+++ b/src/pmt/pmtContainer.html
@@ -19,6 +19,14 @@
             <div class="keyEcho"></div>
             <div class="wordEcho"></div>
             <div class="textHighlighting"></div>
+
+            <div class="gpii-speakText-partially-expanded">
+                <div class="gpii-speakText-moreOptions">
+                    <label class="gpii-speakText-moreOptionsIcon"></label>
+                    <label class="gpiic-speakText-moreOptionsLabel"></label>
+                </div>
+            </div>
+
             <div class="braille"></div>
 
             <br>
