Marked the "Magnifier Follows" files as deprecated since this adjuster has changed for the PM tools in pilots 2.

--- a/src/shared/adjusters/html/magnifierFollowsTemplate.html
+++ b/src/shared/adjusters/html/magnifierFollowsTemplate.html
@@ -1,3 +1,8 @@
+<!-- 
+DEPRECATED - No need to maintain this adjuster. 
+The "Magnifier Follows" adjuster for pilots2 has different styling.
+I will start work on that version and ping you when i have something ready for review.
+ -->
             <h2>
                 <label class="gpiic-increaseSize-magnifierFollowsHeading"></label>
             </h2>
