GPII-364: Created the addContrast adjuster as a composite panel. This will be the container for all adjusters of "add contrast" group. Trying with highContrast adjuster as member of the composite panel but with no success.

--- a/demos/pmt/index.html
+++ b/demos/pmt/index.html
@@ -27,6 +27,7 @@
     <script type="text/javascript" src="../../src/shared/lib/infusion/MyInfusion.js"></script>
 
     <!-- The custom adjusters JS files -->
+    <script type="text/javascript" src="../../src/shared/adjusters/js/addContrast.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/highContrast.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/increaseSize.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/plusMinus.js"></script>
