--- a/src/shared/adjusters/html/highContrastTemplate.html
+++ b/src/shared/adjusters/html/highContrastTemplate.html
@@ -1,4 +1,4 @@
-<input type="checkbox" id="preferenceSwitchContrast" class="gpiic-contrast-constrastInput"/>
+<input type="checkbox" style="display:block !important; clip:inherit !important" id="preferenceSwitchContrast" class="gpiic-contrast-constrastInput"/>
 <h2><label class="gpiic-contrast-contrastLabel"></label></h2>
 
 <div class="gpii-prefsEditor-previewPerSettingContainer">
