GPII-153, GPII-187: Added model relay into the new textfieldSlider component and use it in the speak text demo.

--- a/src/shared/adjusters/html/speakTextCollectiveTemplate.html
+++ b/src/shared/adjusters/html/speakTextCollectiveTemplate.html
@@ -25,9 +25,11 @@
         <div class="gpii-speakText-speechRate-element">
             <div class="gpiic-speakText-speechRate">
                 <label class="gpiic-speakText-speechRate-label gpii-speakText-label"></label><br>
-                <label class="gpiitextfieldStepper-decrement gpiic-speakText-speechRate-minus" id="speechRateMinus"></label>
-                <input type="text" class="gpii-textfieldStepper-field fl-inputs" id="speechRate"/>
-                <label class="gpii-textfieldStepper-increment gpiic-speakText-speechRate-plus" id="speechRatePlus"></label>
+                <div class="gpii-speakText-speechRate-stepper">
+                    <label class="gpiic-textfieldStepper-decrement gpiic-speakText-speechRate-minus" id="speechRateMinus"></label>
+                    <input type="text" class="gpiic-textfieldStepper-valueField gpii-textfieldStepper-valueField fl-inputs" id="speechRate"/>
+                    <label class="gpii-textfieldStepper-increment gpiic-speakText-speechRate-plus" id="speechRatePlus"></label>
+                </div>
             </div>
         </div><br>
     </div>
