--- a/src/shared/adjusters/html/textSizeTemplate.html
+++ b/src/shared/adjusters/html/textSizeTemplate.html
@@ -1,15 +1,16 @@
-        <div class="gpiic-prefsEditor-plus-minus-numerical">
-            <h2><label class="gpiic-increaseSize-plusMinusNumericalLabelTextSize"></label></h2>
-            
+        <div>
+            <h2><label class="gpiic-textSize"></label></h2>
+
             <div class="gpii-prefsEditor-previewPerSettingContainer">
                 <div class="gpii-prefsEditor-adjusterIcons gpii-prefsEditor-previewPerSettingEye"></div>
                 <div class="gpii-prefsEditor-previewPerSettingEyeBackground"></div>
-                <iframe class="gpii-prefsEditor-previewPerSettingFrame gpiic-increaseSize-previewPerSettingFrameTextSize" src="" frameborder="0"></iframe>
+                <iframe class="gpiic-textSize-preview gpii-prefsEditor-previewPerSettingFrame" src="" frameborder="0"></iframe>
             </div>
-        
-            <div class="gpii-increaseSize-plusMinusNumericalWidget">
-                <label class="gpii-increaseSize-plusMinusNumericalMinus gpiic-incresaeSize-plusMinusNumericalMinusTextSize"></label>
-                <input type="text" class="gpii-increaseSize-plusMinusNumericalValue gpiic-increaseSize-plusMinusNumericalValueTextSize fl-inputs"/>
-                <label class="gpii-increaseSize-plusMinusNumericalPlus gpiic-increaseSize-plusMinusNumericalPlusTextSize"></label>
+
+            <div class="gpiic-textSize-stepper gpii-stepper">
+                <label class="gpiic-textfieldStepper-decrement gpii-stepper-buttons"></label>
+                <input type="text" class="gpiic-textfieldStepper-valueField gpii-stepper-valueField fl-inputs"/>
+                <label class="gpiic-textfieldStepper-unitField gpii-stepper-unit"></label>
+                <label class="gpiic-textfieldStepper-increment gpii-stepper-buttons"></label>
             </div>
         </div>
